# simplefastapiapp

./: .gitignore  Dockerfile  Jenkinsfile  README.md  constants.py  exceptions_handler.py  main.py  pyproject.toml  requirements.txt
api/: item.py
configuration/: config.py
database/: sqlalchemy_connect.py
docs/: auto_instrumentation_opentelemetry.md  migration_logfire_to_opentelemetry.md
health/: __init__.py  health_check.py  metrics.py
kubernetes/: README.md  db-secret.yaml  deployment.yaml  redis-secret.yaml  service.yaml
models/data/: item.py
models/request/: item.py
models/response/: RepositoryResponse.py  StandardResponse.py
repository/implementations/: __init__.py  item_repository.py
repository/interfaces/: __init__.py  item_repository.py
service/: item.py
utils/: cache.py  handle_repo_errors.py  logger.py  make_repo_response.py  telemetry.py
